--- a/Success.html
+++ b/Success.html
@@ -136,8 +136,8 @@
         
         .triangle {
         position: absolute;
-        width: 100px; /* set appropriate width */
-        height: 100px; /* set appropriate height */
+        width: 100px; 
+        height: 100px; 
         background: url('/images/Rocket.png') no-repeat center/contain;
         filter: drop-shadow(0 0 8px rgba(212, 214, 240, 0.8));
         transform-origin: center bottom;
