--- a/Scroll-Animation.html
+++ b/Scroll-Animation.html
@@ -55,8 +55,9 @@
         width: 400px;
         height: 200px;
         margin: 10px;
+        border: #ffffffa5 0.1px solid;
         border-radius: 10px;
-        box-shadow: 2px 4px 5px rgba(255, 255, 255, 0.71);
+        box-shadow: 2px 4px 5px rgba(255, 255, 255, 0.259);
         transform: translateX(800%);
         transition: transform 0.8s ease;
         }
